# trajectory_helper

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
cmake/: trajectory_helperConfig.cmake.in
include/trajectory_helper/: calc_spline_curvatures.hpp  calc_spline_headings.hpp  calc_spline_lengths.hpp  calc_splines.hpp  calc_track.hpp  first_intersect_point.hpp  interp_point.hpp  interp_splines.hpp  interp_track.hpp  lookup_track.hpp  project_point.hpp  smooth_track.hpp  types.hpp  utils.hpp
include/trajectory_helper/point/: point.hpp
include/trajectory_helper/spline/: spline.hpp
include/trajectory_helper/track/: calc_track.hpp  first_intersect_point.hpp  interp_track.hpp  interp_track_point.hpp  project_point.hpp  track.hpp  track_point.hpp
test/: first_intersect_point_test.cpp  interp_track_point_test.cpp  interp_track_test.cpp  point_test.cpp  project_point_test.cpp  track_calculate_test.cpp  track_interpolate_test.cpp  track_interpolate_track_test.cpp  track_point_test.cpp  track_project_test.cpp  track_test.cpp
